# runt

./: .dockerignore  .envrc  .gitignore  AGENTS.md  Cargo.toml  FRACTIONAL_INDEXING_ANALYSIS.md  HANDOFF.md  LICENSE  MOUNT_DEMO.md  PHASE2-IMPLEMENTATION-COMPLETE.md  PLAN.md  PR_DESCRIPTION.md  README.md  RELEASING.md  biome.json  components.json  deno.json  docker-compose.yml  fuzz-fractional-indexing.ts  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-auth.ts  test-conda.ipynb  test-directory-creation-order.py  test-phase2-binary-upload.py  test-readonly-manual.py  test-stability.ts  test-uv-deps.ipynb  vitest.config.ts  widget-output.ipynb
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  pr-binary-generation.yml  publish.yml  publish2.yml  python-package.yml  ui-lint.yml  weekly-preview.yml  windows-runner-probe.yml
.zed/: tasks.json
apps/notebook/: index.html  package.json  tsconfig.json  vite-plugin-isolated-renderer.ts  vite.config.ts
apps/sidecar/: vite.config.ts
contributing/: architecture.md  build-dependencies.md  development.md  e2e.md  environments.md  iframe-isolation.md  nteract-elements.md  runtimed.md  ui.md
crates/kernel-env/: Cargo.toml
crates/kernel-env/src/: conda.rs  lib.rs  progress.rs  uv.rs
crates/kernel-launch/: Cargo.toml
crates/kernel-launch/src/: lib.rs  tools.rs
crates/notebook/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
crates/notebook/binaries/: .gitignore  .gitkeep
crates/notebook/capabilities/: default.json
crates/notebook/fixtures/audit-test/: 1-vanilla.ipynb  10-deno.ipynb  10-run-all-error.ipynb  11-rich-outputs.ipynb  12-error-outputs.ipynb  2-uv-inline.ipynb  3-conda-inline.ipynb  4-both-deps.ipynb  8-multi-cell.ipynb  9-html-output.ipynb
crates/notebook/fixtures/audit-test/conda-env-project/: 7-environment-yml.ipynb  environment.yaml
crates/notebook/fixtures/audit-test/pixi-project/: 6-pixi.ipynb  pixi.toml
crates/notebook/fixtures/audit-test/pyproject-project/: 5-pyproject.ipynb  pyproject.toml
crates/notebook/fixtures/conda-project/: environment.yml
crates/notebook/fixtures/conda-project/notebooks/: analysis.ipynb
crates/notebook/fixtures/sample-project/: pyproject.toml
crates/notebook/fixtures/sample-project/notebooks/: analysis.ipynb
crates/notebook/fixtures/trust-tests/: README.md  tampered-signature.ipynb  untrusted-conda-deps.ipynb  untrusted-mixed-deps.ipynb  untrusted-typosquat.ipynb  untrusted-valid-deps.ipynb
crates/notebook/icons/: icon.icns
crates/notebook/resources/sample-notebooks/: download-stats.ipynb  meet-markdown-and-math.ipynb  pandas-to-geojson.ipynb
crates/notebook/src/: analytics.rs  cli_install.rs  conda_env.rs  deno_env.rs  env_pool.rs  environment_yml.rs  execution_queue.rs  format.rs  kernel.rs  lib.rs  main.rs  menu.rs  notebook_state.rs  pixi.rs  project_file.rs  pyproject.rs  runtime.rs  session.rs  settings.rs  shell_env.rs  telemetry.rs  tools.rs  trust.rs  typosquat.rs  uv_env.rs  webdriver.rs  webdriver_bridge.js
crates/notebook/tests/: env_fallback.rs
crates/pool-daemon/: Cargo.toml
crates/pool-daemon/src/: client.rs  daemon.rs  lib.rs  main.rs  protocol.rs  service.rs  singleton.rs
crates/runt/: Cargo.toml
crates/runt-trust/: Cargo.toml
crates/runt-trust/src/: lib.rs
crates/runt/src/: kernel_client.rs  main.rs
crates/runtimed/: Cargo.toml  build.rs
crates/runtimed-py/: Cargo.toml
crates/runtimed-py/src/: async_session.rs  client.rs  error.rs  lib.rs  output.rs  session.rs
crates/runtimed/examples/: test_inline_deps.rs
crates/runtimed/src/: blob_server.rs  blob_store.rs  client.rs  comm_state.rs  connection.rs  daemon.rs  daemon_state_client.rs  fractional_index.rs  inline_env.rs  kernel_manager.rs  lib.rs  main.rs  notebook_doc.rs  notebook_metadata.rs  notebook_protocol.rs  notebook_server.rs  notebook_sync_client.rs  notebook_sync_server.rs  output_store.rs  project_file.rs  protocol.rs  runtime.rs  service.rs  settings_doc.rs  singleton.rs  stream_terminal.rs  sync_client.rs  sync_server.rs  terminal_size.rs
crates/runtimed/tests/: integration.rs
crates/sidecar/: Cargo.toml  README.md  build.rs
crates/sidecar/src/: lib.rs
crates/tauri-jupyter/: Cargo.toml
crates/tauri-jupyter/src/: base64.rs  lib.rs  message.rs
crates/xtask/: Cargo.toml
docs/: environments.md  python-bindings.md  runtimed.md  settings.md  sharing.md  state-sync-audit.md  widgets.md
e2e/: Dockerfile  Dockerfile.base  Dockerfile.dev  README.md  dev.sh  helpers.js  package.json  tsconfig.json  wdio.conf.js
e2e/specs/: alt-enter-execute-insert.spec.js  backspace-delete-cell.spec.js  both-deps-panel.spec.js  cell-operations.spec.js  conda-deps-panel.spec.js  conda-inline-deps.spec.js  conda-inline.spec.js  deno-runtime.spec.js  deno.spec.js  deps-panel.spec.js  display-update.spec.js  env-detection.spec.js  environment-yml-detection.spec.js  error-handling.spec.js  iframe-isolation.spec.js  kernel-lifecycle.spec.js  keyboard-navigation.spec.js  markdown-cell.spec.js  notebook-execution.spec.js  pixi-env-detection.spec.js  prewarmed-uv.spec.js  pyproject-startup.spec.js  rich-outputs.spec.js  run-all-cells.spec.js  run-all-error-stops.spec.js  save-dirty-state.spec.js  settings-panel.spec.js  smoke.spec.js  trust-decline.spec.js  uv-inline-deps.spec.js  uv-inline.spec.js  uv-pyproject.spec.js  vanilla-startup.spec.js
examples/: deno-hello.ipynb
notebooks/: dark-mode-test.ipynb  ipywidgets-demo.ipynb  test-isolation.ipynb
python/runtimed/: .gitignore  README.md  pyproject.toml
python/runtimed/src/runtimed/: __init__.py  _binary.py
python/runtimed/tests/: conftest.py  run-integration.sh  test_daemon_integration.py  test_session_unit.py
research/: .gitignore  REACTIVE_NOTEBOOKS_PROTOCOL_RESEARCH.md
scripts/: bump-version.ts  summarize-ci-log.py
services/analytics/: README.md  package.json  schema.sql  wrangler.toml
services/telemetry/: README.md  package.json  tsconfig.json  wrangler.toml
src/: index.css  vite-env.d.ts
src/bindings/: CondaDefaults.ts  (+6 more)
(+184 files in other folders)
