[workspace]
members = [
    "crates/sidecar",
    "crates/runt",
    "crates/runt-trust",
    "crates/kernel-launch",
    "crates/kernel-env",
    "crates/notebook",
    "crates/tauri-jupyter",
    "crates/xtask",
    "crates/runtimed",
    "crates/runtimed-py",
]
default-members = ["crates/notebook"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/runtimed/runt"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
futures = "0.3"
bytes = "1"
base64 = "0.22"
tokio = { version = "1.36.0", features = ["full"] }
runtimelib = { version = "1.4.0", default-features = false }
jupyter-protocol = "1.4.0"
thiserror = "1"
schemars = "1"
notify = "8"
notify-debouncer-mini = "0.7"
ts-rs = { version = "12", features = ["serde-compat"] }

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
