[package]
name = "notebook"
version = "1.0.0"
edition = "2021"
description = "Tauri-based notebook UI for Jupyter kernels"
repository = "https://github.com/runtimed/runt"
license = "BSD-3-Clause"

[lib]
name = "notebook"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = ["tokio-runtime", "ring"] }
tauri-jupyter = { path = "../tauri-jupyter" }
nbformat = "1.0.0"
petname = "2"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
strsim = "0.11"  # For Levenshtein distance (typosquat detection)
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "5"
toml = "0.8"
pathdiff = "0.2"
pyproject-toml = "0.13"

# Conda environment support via rattler
rattler = "0.39"
rattler_cache = "0.6"
rattler_conda_types = "0.43"
rattler_repodata_gateway = { version = "0.25", features = ["gateway"] }
rattler_solve = { version = "4.2", features = ["resolvo"] }
rattler_virtual_packages = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reqwest-middleware = "0.4"
url = "2.5"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
