[package]
name = "notebook"
version = "1.0.0"
edition = "2021"
description = "Tauri-based notebook UI for Jupyter kernels"
repository = "https://github.com/nteract/desktop"
license = "BSD-3-Clause"

[lints]
workspace = true

[lib]
name = "notebook"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "notebook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = ["tokio-runtime", "ring"] }
tauri-jupyter = { path = "../tauri-jupyter" }
runtimed = { path = "../runtimed" }
runt-trust = { path = "../runt-trust" }
kernel-launch = { path = "../kernel-launch" }
kernel-env = { path = "../kernel-env" }
nbformat = "1.2.0"
petname = "2"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
strsim = "0.11"  # For Levenshtein distance (typosquat detection)
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "5"
toml = "0.8"
serde_yaml = "0.9"
pathdiff = "0.2"
pyproject-toml = "0.13"
schemars = { workspace = true }
ts-rs = { workspace = true }

# Conda environment support via rattler
rattler = "0.39"
rattler_cache = "0.6"
rattler_conda_types = "0.43"
rattler_repodata_gateway = { version = "0.25", features = ["gateway"] }
rattler_solve = { version = "4.2", features = ["resolvo"] }
rattler_virtual_packages = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reqwest-middleware = "0.4"
url = "2.5"

# WebDriver test server (native E2E testing without Docker)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
base64 = { workspace = true, optional = true }

# macOS: prevent focus stealing in webdriver mode
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26", optional = true }

# Unix process group support for kernel cleanup
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }

[features]
default = []
webdriver-test = ["axum", "tower-http", "base64", "cocoa"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
