[package]
name = "runt-cli"
version = "1.2.0"
edition.workspace = true
description = "CLI for Jupyter Runtimes — install via GitHub Releases or `pip install runtimed`, not crates.io"
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "runt"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = ["tokio-runtime", "ring"] }
sidecar = { path = "../sidecar" }
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
petname = "2"
rpassword = "7"
dirs = "5"
