[package]
name = "sidecar"
version = "1.3.0"
edition.workspace = true
description = "Sidecar jupyter outputs — install via GitHub Releases or `pip install runtimed`, not crates.io"
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tauri-jupyter = { path = "../tauri-jupyter" }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
mime_guess = "2.0"
rust-embed = { version = "8", features = ["compression"] }
serde = { workspace = true }
serde_json = { workspace = true }
jupyter-protocol = { workspace = true }
runtimelib = { workspace = true, features = [
    "tokio-runtime",
    "ring"
] }
futures = { workspace = true }
querystring = "1.1.0"
tao = "0.31.0"
wry = "0.47.0"
muda = "0.15"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
uuid = { workspace = true }

[lib]
name = "sidecar"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "sidecar"
