[package]
name = "tauri-jupyter"
version = "0.1.0"
edition.workspace = true
description = "Shared Jupyter message types for Tauri/WebView applications"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jupyter-protocol = { workspace = true }
thiserror = { workspace = true }
