[project]
name = "runtimed"
version = "0.1.4"
description = "Python toolkit for Jupyter runtimes, powered by runtimed Rust binaries"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Kyle Kelley", email = "rgbkrk@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
kernel = ["ipykernel>=6.0"]
bridge = ["pyzmq>=25.0"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../crates/runtimed-py/Cargo.toml"
python-source = "src"
bindings = "pyo3"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ipykernel>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
